Plugins/UnrealDotNet/Source/NetCoreProject/UnrealEngine/Generate/Class/UDecalComponent.cs

		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UDecalComponent_ShutdownAfterError(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UDecalComponent_AddToCluster(IntPtr Self, IntPtr ClusterRootOrObjectFromCluster, bool bAddAsMutableObject);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UDecalComponent_CanBeClusterRoot(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UDecalComponent_CanBeInCluster(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UDecalComponent_CreateCluster(IntPtr Self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UDecalComponent_OnClusterMarkedAsPendingKill(IntPtr Self);
		
		#endregion
		
		#region Property
		
		/// <summary>
		/// <para>Automatically destroys the owning actor after fully fading out. </para>
		/// </summary>
		public byte bDestroyOwnerAfterFade
		{
			get => E_PROP_UDecalComponent_bDestroyOwnerAfterFade_GET(NativePointer);
			set => E_PROP_UDecalComponent_bDestroyOwnerAfterFade_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Decal size in local space (does not include the component scale), technically redundant but there for convenience </para>
		/// </summary>
		public FVector DecalSize
		{
			get => E_PROP_UDecalComponent_DecalSize_GET(NativePointer);
			set => E_PROP_UDecalComponent_DecalSize_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Time in seconds for the decal to fade out. Set fade duration and start delay to 0 to make persistent. Only fades in active simulation or game. </para>
		/// </summary>
		public float FadeDuration
		{
			get => E_PROP_UDecalComponent_FadeDuration_GET(NativePointer);
			set => E_PROP_UDecalComponent_FadeDuration_SET(NativePointer, value);
		}

		public float FadeScreenSize
		{
			get => E_PROP_UDecalComponent_FadeScreenSize_GET(NativePointer);
			set => E_PROP_UDecalComponent_FadeScreenSize_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Time in seconds to wait before beginning to fade out the decal. Set fade duration and start delay to 0 to make persistent. </para>
		/// </summary>
		public float FadeStartDelay
		{
			get => E_PROP_UDecalComponent_FadeStartDelay_GET(NativePointer);
			set => E_PROP_UDecalComponent_FadeStartDelay_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Controls the order in which decal elements are rendered.  Higher values draw later (on top). </para>
		/// <para>Setting many different sort orders on many different decals prevents sorting by state and can reduce performance. </para>
		/// </summary>
		public int SortOrder
		{
			get => E_PROP_UDecalComponent_SortOrder_GET(NativePointer);
			set => E_PROP_UDecalComponent_SortOrder_SET(NativePointer, value);
		}

		#endregion
		
		#region ExternMethods
		public override void BeginPlay()
			=> E_UDecalComponent_BeginPlay(this);
		
		public override void CreateRenderState_Concurrent()
			=> E_UDecalComponent_CreateRenderState_Concurrent(this);
		
		public override void DestroyRenderState_Concurrent()
			=> E_UDecalComponent_DestroyRenderState_Concurrent(this);
		
		public float GetFadeDuration()
			=> E_UDecalComponent_GetFadeDuration(this);
		
		public float GetFadeStartDelay()
			=> E_UDecalComponent_GetFadeStartDelay(this);
		
		public virtual int GetNumMaterials()
			=> E_UDecalComponent_GetNumMaterials(this);
		
		public FTransform GetTransformIncludingDecalSize()
			=> E_UDecalComponent_GetTransformIncludingDecalSize(this);
		
		
		/// <summary>
		/// <para>Called when the life span of the decal has been exceeded </para>
		/// </summary>
		protected virtual void LifeSpanCallback()
			=> E_UDecalComponent_LifeSpanCallback(this);
		
		
		/// <summary>
		/// <para>Pushes new selection state to the render thread primitive proxy </para>
		/// </summary>
		public void PushSelectionToProxy()
			=> E_UDecalComponent_PushSelectionToProxy(this);
		
		public override void SendRenderTransform_Concurrent()
			=> E_UDecalComponent_SendRenderTransform_Concurrent(this);
		
		
		/// <summary>
		/// <para>Sets the decal's fade start time, duration and if the owning actor should be destroyed after the decal is fully faded out. </para>
		/// <para>The default value of 0 for FadeStartDelay and FadeDuration makes the decal persistent. See DecalLifetimeOpacity material </para>
		/// <para>node to control the look of "fading out." </para>
		/// <param name="StartDelay">Time in seconds to wait before beginning to fade out the decal. </param>
		/// <param name="Duration">Time in second for the decal to fade out. </param>
		/// <param name="DestroyOwnerAfterFade">Should the owning actor automatically be destroyed after it is completely faded out. </param>
		/// </summary>
		public void SetFadeOut(float StartDelay, float Duration, bool DestroyOwnerAfterFade = true)
			=> E_UDecalComponent_SetFadeOut(this, StartDelay, Duration, DestroyOwnerAfterFade);
		
		
		/// <summary>
		/// <para>Set the FadeScreenSize for this decal component </para>
		/// </summary>
		public void SetFadeScreenSize(float NewFadeScreenSize)
			=> E_UDecalComponent_SetFadeScreenSize(this, NewFadeScreenSize);
		
		public void SetLifeSpan(float LifeSpan)
			=> E_UDecalComponent_SetLifeSpan(this, LifeSpan);
		
		
		/// <summary>
		/// <para>Sets the sort order for the decal component. Higher values draw later (on top). This will force the decal to reattach </para>
		/// </summary>
		public void SetSortOrder(int Value)
			=> E_UDecalComponent_SetSortOrder(this, Value);
		
		public override void ApplyWorldOffset(FVector InOffset, bool bWorldShift)
			=> E_UDecalComponent_ApplyWorldOffset(this, InOffset, bWorldShift);
		
		public override void BeginDestroy()
			=> E_UDecalComponent_BeginDestroy(this);
		
		
		/// <summary>
		/// <para>Calculate the axis-aligned bounding cylinder of the component (radius in X-Y, half-height along Z axis). </para>
		/// <para>Default behavior is just a cylinder around the box of the cached BoxSphereBounds. </para>
		/// </summary>
		public override void CalcBoundingCylinder(float CylinderRadius, float CylinderHalfHeight)
			=> E_UDecalComponent_CalcBoundingCylinder(this, CylinderRadius, CylinderHalfHeight);
		
		
		/// <summary>
		/// <para>Called to see if it's possible to attach another scene component as a child. </para>
		/// <para>Note: This can be called on template component as well! </para>
		/// </summary>
		public override bool CanAttachAsChild(USceneComponent ChildComponent, string SocketName)
			=> E_UDecalComponent_CanAttachAsChild(this, ChildComponent, SocketName);
		
		public override void DestroyComponent(bool bPromoteChildren)
			=> E_UDecalComponent_DestroyComponent(this, bPromoteChildren);
		
		
		/// <summary>
		/// <para>Detach this component from whatever it is attached to. Automatically unwelds components that are welded together (See WeldTo) </para>
		/// <param name="DetachmentRules">How to handle transforms & modification when detaching. </param>
		/// </summary>
		public override void DetachFromComponent(FDetachmentTransformRules DetachmentRules)
			=> E_UDecalComponent_DetachFromComponent(this, DetachmentRules);
		
		
		/// <summary>
		/// <para>Detach this component from whatever it is attached to. Automatically unwelds components that are welded together (See WeldTo) </para>
		/// <param name="bMaintainWorldPosition">If true, update the relative location of the component to keep its world position the same </param>
		/// <param name="bCallModify">If true, call Modify() on the component and the current attach parent component </param>
		/// </summary>
		public override void DetachFromParentDeprecated(bool bMaintainWorldPosition, bool bCallModify)
			=> E_UDecalComponent_DetachFromParent(this, bMaintainWorldPosition, bCallModify);
		
		
		/// <summary>
		/// <para>return true if socket with the given name exists </para>
		/// <param name="InSocketName">Name of the socket or the bone to get the transform </param>
		/// <return>true if the socket with the given name exists. Otherwise, return false </return>
		/// </summary>
		public override bool DoesSocketExist(string InSocketName)
			=> E_UDecalComponent_DoesSocketExist(this, InSocketName);
		
		
		/// <summary>
		/// <para>Returns the channel that this component belongs to when it moves. </para>
		/// </summary>
		public override ECollisionChannel GetCollisionObjectType()
			=> (ECollisionChannel)E_UDecalComponent_GetCollisionObjectType(this);
		
		
		/// <summary>
		/// <para>Returns the response that this component has to a specific collision channel. </para>
		/// </summary>
		public override ECollisionResponse GetCollisionResponseToChannel(ECollisionChannel Channel)
			=> (ECollisionResponse)E_UDecalComponent_GetCollisionResponseToChannel(this, (byte)Channel);
		
		
		/// <summary>
		/// <para>Get velocity of the component: either ComponentVelocity, or the velocity of the physics body if simulating physics. </para>
		/// <return>Velocity of the component </return>
		/// </summary>
		public override FVector GetComponentVelocity()
			=> E_UDecalComponent_GetComponentVelocity(this);
		
		
		/// <summary>
		/// <para>Get world-space socket or bone location. </para>
		/// <param name="InSocketName">Name of the socket or the bone to get the transform </param>
		/// <return>Socket transform in world space if socket if found. Otherwise it will return component's transform in world space. </return>
		/// </summary>
		public override FVector GetSocketLocation(string InSocketName)
			=> E_UDecalComponent_GetSocketLocation(this, InSocketName);
		
		
		/// <summary>
		/// <para>Get world-space socket or bone FQuat rotation. </para>
		/// <param name="InSocketName">Name of the socket or the bone to get the transform </param>
		/// <return>Socket transform in world space if socket if found. Otherwise it will return component's transform in world space. </return>
		/// </summary>
		public override FQuat GetSocketQuaternion(string InSocketName)
			=> E_UDecalComponent_GetSocketQuaternion(this, InSocketName);
		
		
		/// <summary>
		/// <para>Get world-space socket or bone  FRotator rotation. </para>
		/// <param name="InSocketName">Name of the socket or the bone to get the transform </param>
		/// <return>Socket transform in world space if socket if found. Otherwise it will return component's transform in world space. </return>
		/// </summary>
		public override FRotator GetSocketRotation(string InSocketName)
			=> E_UDecalComponent_GetSocketRotation(this, InSocketName);
		
		
		/// <summary>
		/// <para>Get world-space socket transform. </para>
		/// <param name="InSocketName">Name of the socket or the bone to get the transform </param>
		/// <return>Socket transform in world space if socket if found. Otherwise it will return component's transform in world space. </return>
		/// </summary>
		public override FTransform GetSocketTransform(string InSocketName, ERelativeTransformSpace TransformSpace)
			=> E_UDecalComponent_GetSocketTransform(this, InSocketName, (byte)TransformSpace);
		
		
		/// <summary>
		/// <para>Returns true if this component has any sockets </para>
		/// </summary>
		public override bool HasAnySockets()
			=> E_UDecalComponent_HasAnySockets(this);
		
